languages/io-automaton-fe/src/test/resources/valid/symtab/ForSimpleSymTabTest.ioautomaton
package valid.symtab;

automaton ForSimpleSymTabTest{

	input int i1;
	
	variable double v1;
	
	output boolean o1;
	
	state S1, S2;
	initial S1;
	
	S1 -> S2;
}