languages/io-automaton-fe/src/test/resources/invalid/InitialReactionAndActionDontFit.ioautomaton
package invalid;

automaton InitialReactionAndActionDontFit{
    input int e;
    
    variable int v;
    
    output int i;
    output boolean s;
    
    state A,B;
    
    initial A /{v = false, s = 255 };
    
    A->B;

}